Migrate test wiring to kyo-test RC5
Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>